src/app/shared/components/gallery/gallery.component.scss
.gallery-wrapper {
  display: grid;
  grid-template-columns: repeat(auto-fit, 200px);
  align-items: center;
  grid-gap: 1em;
  justify-content: center;
}

.gallery-header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;

  &__left {
    display: flex;
    align-items: center;
  }
}

.folders-wrapper {
  display: flex;
  flex-wrap: wrap;
  margin: 1em 0;
  justify-content: center;
  & > * {
    margin: 0 1em 1em 0;
  }
}

img {
  display: block;
  width: 100%;
}

input[type='file'] {
  display: none;
}

